--- a/index.html
+++ b/index.html
@@ -190,12 +190,46 @@
   </div>
 
   <div class="tab" id="services">
-    <h2>Services</h2>
-    <ul>
-      <li>Single-cell RNA-seq analysis</li>
-      <li>Bulk RNA-seq analysis</li>
-    </ul>
-  </div>
+  <h2>Bioinformatics & Statistical Consulting</h2>
+  <p>
+    I am open to academic collaborations and offer specialized bioinformatics and statistical consulting services, with a focus on transcriptomics and high-throughput sequencing data. My work is aimed at supporting robust and reproducible research through expert guidance in data analysis, experimental design, and interpretation.
+  </p>
+
+  <h3>🧬 Single-Cell & Bulk RNA-Seq Analysis</h3>
+  <p>
+    I provide comprehensive analysis pipelines for both single-cell RNA sequencing (scRNA-seq) and bulk RNA-seq datasets to help researchers extract meaningful biological insights from complex transcriptomic data.
+  </p>
+  <ul>
+    <li>Data preprocessing: quality control, alignment, and normalization</li>
+    <li>Dimensionality reduction, clustering, and trajectory inference (for scRNA-seq)</li>
+    <li>Differential gene expression and gene set enrichment analysis</li>
+    <li>Cell type annotation and signature mapping</li>
+    <li>Batch effect correction and dataset integration</li>
+    <li>Pseudotime analysis and cell–cell communication studies</li>
+    <li>Customized visualizations for manuscripts, presentations, and grant proposals</li>
+  </ul>
+
+  <h3>📊 Statistical Analysis & Research Support</h3>
+  <p>
+    I also offer tailored statistical consulting services for basic, preclinical, and clinical research projects.
+  </p>
+  <ul>
+    <li>Support with experimental design and statistical power calculation</li>
+    <li>Parametric and non-parametric hypothesis testing (t-tests, ANOVA, regression, etc.)</li>
+    <li>Survival analysis, model fitting, and multivariate analysis</li>
+    <li>Correlation and association studies</li>
+    <li>Publication-ready plots and data summaries</li>
+  </ul>
+
+  <p>
+    With a strong background in cancer biology and transcriptomics, I approach each project with scientific rigor and precision. My hands-on experience includes working with human single-cell and bulk RNA-seq datasets in the context of cancer biology, immune signaling, and therapeutic response.
+  </p>
+  <p>
+    While I am in the early stages of offering professional services, I am committed to delivering high-quality, transparent, and tailored results aligned with your research goals.
+  </p>
+
+  <p><strong>📩 Interested in collaborating or starting a project?</strong> Please feel free to <a href="#contact" onclick="showTab('contact')">get in touch</a>.</p>
+</div>
 
   <div class="tab" id="youtube">
     <h2>YouTube Channel</h2>
