--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <li><a href="#" onclick="showTab('about')">About Me</a></li>
       <li><a href="#" onclick="showTab('publications')">Publications</a></li>
       <li><a href="#" onclick="showTab('research')">Research Activity</a></li>
-      <li><a href="#" onclick="showTab('services')">Services</a></li>
+      <li><a href="#" onclick="showTab('services')">Bioinformatics & Statistical Consulting</a></li>
       <li><a href="#" onclick="showTab('youtube')">YouTube</a></li>
       <li><a href="#" onclick="showTab('contact')">Contact Me</a></li>
     </ul>
