--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 </head>
 <body>
   <nav>
+  <div style="display: flex; align-items: center; justify-content: space-between; padding: 0 10px;">
+    <img src="ss-monogram.png" alt="SS Logo" style="height: 40px; padding: 5px;" />
     <ul>
       <li><a href="#" onclick="showTab('about')">About Me</a></li>
       <li><a href="#" onclick="showTab('publications')">Publications</a></li>
