--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
         <h2>About Me</h2>
         <p>I am a cancer biologist with a strong interest in deciphering the molecular and cellular mechanisms that drive cancer progression, therapy resistance, and tumor–immune interactions. My current research emphasizes racial disparities in cancer and investigates critical signaling pathways, including Notch and the PPARγ–ELF3 axis. I earned my PhD in Zoology from the prestigious Banaras Hindu University (BHU), India, where I developed a solid foundation in computational biology and insect ecology. During my doctoral research, I discovered a novel autosomal recessive eye color mutant—termed the golden brown eye mutant—in Zeugodacus cucurbitae, adding to the understanding of genetic regulation in insect models. Following my PhD, I completed a postdoctoral fellowship at the University of Miami, Sylvester Comprehensive Cancer Center, where I expanded my expertise in cancer biology, immuno-oncology, and bioinformatics. My technical competencies include single-cell and bulk RNA sequencing and analysis, flow cytometry, mammalian cell culture, in vivo mouse models, and patient-derived tumor models. I am proficient in computational workflows, differential gene expression analysis, and trajectory inference. I actively contribute to collaborative projects involving data analysis, figure generation, and manuscript development.</p>
         <p>Outside the lab, I am passionate about science communication, staying current with advances in cancer research and immunology, and mentoring early-career researchers in both experimental and computational aspects of biomedical science.</p>
+        <h2>Education</h2>
+<div style="line-height: 1.7; text-align: justify;">
+  <p><strong>PhD in Zoology</strong> | <em>2017–2023</em><br>
+  Department of Zoology, Institute of Science<br>
+  Banaras Hindu University, Varanasi, India<br>
+  <strong>Thesis:</strong> <em>Study on life history traits of a melon fly (<i>Z. cucurbitae</i>) and establishing its genomic and proteomic resources.</em><br>
+  <strong>Supervisor:</strong> Prof. Arvind Kumar Singh</p>
+
+  <p><strong>MSc in Zoology</strong> | <em>2014–2016</em><br>
+  Department of Zoology, Institute of Science<br>
+  Banaras Hindu University, Varanasi, India</p>
+
+  <p><strong>BSc (Hons.) in Zoology</strong> | <em>2011–2014</em><br>
+  Department of Zoology, Institute of Science<br>
+  Banaras Hindu University, Varanasi, India</p>
+</div>
       </div>
     </div>
   </div>
