--- a/index.html
+++ b/index.html
@@ -14,44 +14,40 @@
     scroll-behavior: smooth;
   }
 
-  nav {
-    background-color: #222;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-  }
+  .nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  max-width: 100%;
+}
 
-  nav img {
-    height: 40px;
-    padding: 10px 20px;
-  }
+.logo img {
+  height: 40px;
+  padding: 10px 0;
+}
 
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    flex-grow: 1;
-  }
+.nav-tabs {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
-  nav li {
-    margin: 0;
-  }
+.nav-tabs li {
+  margin-left: 10px;
+}
 
-  nav a {
-    display: block;
-    padding: 14px 20px;
-    text-decoration: none;
-    color: white;
-  }
+.nav-tabs a {
+  display: block;
+  padding: 14px 16px;
+  text-decoration: none;
+  color: white;
+}
 
-  nav a:hover {
-    background-color: #575757;
-  }
+.nav-tabs a:hover {
+  background-color: #575757;
+}
 
   header {
     background-image: url('banner.jpg');
@@ -172,9 +168,11 @@
 </head>
 <body>
   <nav>
-  <div style="display: flex; align-items: center; justify-content: space-between; padding: 0 10px;">
-    <img src="ss-monogram.png" alt="SS Logo" style="height: 40px; padding: 5px;" />
-    <ul>
+  <div class="nav-bar">
+    <div class="logo">
+      <img src="ss-monogram.png" alt="SS Logo" />
+    </div>
+    <ul class="nav-tabs">
       <li><a href="#" onclick="showTab('about')">About Me</a></li>
       <li><a href="#" onclick="showTab('publications')">Publications</a></li>
       <li><a href="#" onclick="showTab('research')">Research Activity</a></li>
@@ -182,7 +180,8 @@
       <li><a href="#" onclick="showTab('youtube')">YouTube</a></li>
       <li><a href="#" onclick="showTab('contact')">Contact Me</a></li>
     </ul>
-  </nav>
+  </div>
+</nav>
 
   <header>
     <h1>Shailesh Singh, PhD</h1>
