--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
   }
 
   .about-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 40px;
-    flex-wrap: wrap;
-  }
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+}
 
   .profile-pic {
     width: 300px;
