--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@
     flex-shrink: 0;
   }
 
-  .bio {
-    flex: 1;
-    text-align: justify;
-  }
+  ..bio {
+  flex: 1;
+  min-width: 300px;
+  max-width: 700px;
+  text-align: justify;
+}
 
   .title-box {
     font-size: 0.9rem;
