--- a/index.html
+++ b/index.html
@@ -85,26 +85,28 @@
   .about-container {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 40px;
   flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-  .profile-pic {
-    width: 300px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px gray;
-  }
+.left-panel {
+  flex-shrink: 0;
+  max-width: 300px;
+}
 
-  .left-panel {
-    width: 220px;
-    flex-shrink: 0;
-  }
+.profile-pic {
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0 0 5px gray;
+}
 
-  ..bio {
+.bio {
   flex: 1;
   min-width: 300px;
-  max-width: 700px;
+  max-width: 800px;
   text-align: justify;
 }
 
