--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
   </div>
 
   <div class="tab" id="publications">
+    <div class="publications-container">
     <h2>Research Articles</h2>
     <ul>
       <li>Shailesh Singh, Megha Das, Rumela Chakrabarti; Abstract 777: Notch signaling dependent chemoresistance in racial disparity in ER+ breast cancer. <i>Cancer Research</i> 15 March 2024; 84: 777. <a href="https://doi.org/10.1158/1538-7445.AM2024-777" target="_blank">Link</a></li>
