--- a/index.html
+++ b/index.html
@@ -150,6 +150,21 @@
     }
   }
 </style>
+  .publications-container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 40px 20px;
+  text-align: justify;
+}
+
+.publications-container ul {
+  padding-left: 20px;
+}
+
+.publications-container li {
+  margin-bottom: 18px;
+  line-height: 1.7;
+}
   <script>
   function showTab(tabId) {
     const tabs = document.querySelectorAll('.tab');
